2002-08-02  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/commands.c (edit_cut_text_callback): 
	* lib/text.c (text_delete_all): Now functioning undo for text cut.
	
	* app/commands.c (edit_cut_text_callback): Now removes text.
	Undo is broken, though.

2002-08-01  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/diagram.c (diagram_update_menu_sensitivity): 
	Making cut_text active.
	
	* app/commands.h: 
	* app/commands.c: Using PROP_TYPE_TEXT to find text to copy to
	clipboard.  Also removed AA callback.	

2002-08-01  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/chronogram/chronoref.c: 
	* objects/chronogram/chronoline.c: 
	* objects/SADT/annotation.c: 
	* objects/SADT/arrow.c: 
	* objects/SADT/box.c: 
	* objects/GRAFCET/vergent.c: 
	* objects/GRAFCET/vector.c: 
	* objects/GRAFCET/step.c: 
	* objects/GRAFCET/condition.c: 
	* objects/GRAFCET/action.c: 
	* objects/ER/participation.c: 
	* objects/ER/relationship.c: 
	* objects/ER/entity.c: 
	* objects/ER/attribute.c: 
	Removing unnecessary GTK references.

2002-07-31  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/standard/image.c: 
	* objects/standard/textobj.c: 
	* objects/standard/ellipse.c: 
	* objects/standard/polygon.c: 
	* objects/standard/beziergon.c:
	* objects/standard/box.c: 
	Making default default properties.
	
	* objects/standard/image.c: 
	* objects/standard/arc.c: 
	* objects/standard/box.c: 
	* objects/standard/zigzagline.c: 
	* objects/standard/polyline.c: 
	* objects/standard/line.c: 
	* objects/standard/ellipse.c: 
	* objects/standard/polygon.c: 
	* objects/standard/beziergon.c: Removing vestigal GTK stuff.

	* lib/object_defaults.c (dia_object_default_create): 
	* lib/proplist.c: 
	* lib/properties.h: 
	* lib/object.c (object_copy_using_properties): 
	* lib/propdialogs.c: 
	* lib/propinternals.h: 
	* lib/propobject.c (object_create_props_dialog)
	(object_copy_props): 
	Removing the standard (toolbox) properties from defaults dialogs.

2002-07-30  Lars Clausen  <lrclause@cs.uiuc.edu>
