@@ -45,7 +45,7 @@
 #include "pixmaps/condition.xpm"
 
 #define CONDITION_LINE_WIDTH GRAFCET_GENERAL_LINE_WIDTH
-#define CONDITION_FONT "Sans"
+#define CONDITION_FONT BASIC_SANS_FONT
 #define CONDITION_FONT_STYLE STYLE_BOLD
 #define CONDITION_FONT_HEIGHT 0.8
 #define CONDITION_LENGTH (1.5)
